--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -1,7 +1,7 @@
 #log4j配置文件位置
 logging:
   config: classpath:log4j/log4j2.xml
-    # 打印sql
+  # 打印sql
   level:
     com.fei.springboothigh.mapper: debug
 
@@ -13,6 +13,10 @@ spring:
     username: root
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
+#redis配置
+  redis:
+    host: 192.168.31.60
+    port: 6379
 
 #Mybatis配置文件
 mybatis:
